se terminan de crear los controladores y se modifica signo vital

--- a/src/view/signovital.html
+++ b/src/view/signovital.html
@@ -114,23 +114,15 @@
                     <form>
                         <div class="mb-3">
                             <label class="form-label">Fecha de la toma</label>
-                            <input type="date" class="form-control" id="">
+                            <input type="date" class="form-control" id="fechasignovital">
                         </div>
                         <div class="mb-3">
-                            <label class="form-label">Descripcion</label>
-                            <div class="form-floating">
-                                <textarea class="form-control" placeholder="Leave a comment here" id=""></textarea>
-                                <label for="floatingTextarea">Comentarios</label>
-                            </div>
+                            <label class="form-label">Nombre</label>
+                            <input type="text" class="form-control" id="nombresignovital">
                         </div>
                         <div class="mb-3">
-                            <select class="form-select" id="">
-                                <option selected>Selecciona un signo vital</option>
-                                <option value="1">Presión sanguinea</option>
-                                <option value="2">Temperatura</option>
-                                <option value="3">Saturación de oxigeno</option>
-                                <option value="4">Pulso Sanguineo</option>
-                            </select>
+                            <label class="form-label">Valor</label>
+                            <input type="text" class="form-control" id="valorsignovital">
                         </div>
                         <button class="btn btn-primary">ENVIAR</button>
                     </form>
