--- a/src/view/enfermedad.html
+++ b/src/view/enfermedad.html
@@ -29,7 +29,7 @@
                         </div>
                         <div class="col-6">
                             <label class="form-label">Grado</label>
-                            <select class="form-select" aria-label="Default select example">
+                            <select class="form-select" aria-label="Default select example" id="gradoenfermedad">
                                 <option selected>Selecciona una opción</option>
                                 <option value="1">Uno</option>
                                 <option value="2">Dos</option>
