--- a/src/view/enfermedad.html
+++ b/src/view/enfermedad.html
@@ -43,11 +43,13 @@
                             <input type="text" class="form-control" id="probabilidadvidaenfermedad">
                         </div>
                     </div>
-                    <button class="btn btn-primary w-100 mt-3" type="submit" id="botonregistromedico">Registrar</button>
+                    <button class="btn btn-primary w-100 mt-3" type="submit" id="botonregistroenfermedad">Registrar</button>
                 </form>
             </div>
         </div>
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="../controllers/controladorenfermedad.js"></script>
 </body>
 </html>
