--- a/src/view/medicamento.html
+++ b/src/view/medicamento.html
@@ -49,16 +49,18 @@
                         </div>
                         <div class="col-6">
                             <div class="form-check form-switch my-4">
-                                <input class="form-check-input" type="checkbox" role="switch" id="disponibilidadmedico">
+                                <input class="form-check-input" type="checkbox" role="switch" id="copagomedicamento">
                                 <label class="form-check-label" for="flexSwitchCheckDefault">¿Tiene copago?</label>
                             </div>
                         </div>
                     </div>
-                    <button class="btn btn-primary w-100" type="submit" id="botonregistromedico">Registrar</button>
+                    <button class="btn btn-primary w-100" type="submit" id="botonregistromedicamento">Registrar</button>
                 </form>
             </div>
         </div>
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="../controllers/controladormedicamento.js"></script>
 </body>
 </html>
