--- a/src/view/signovital.html
+++ b/src/view/signovital.html
@@ -124,7 +124,7 @@
                             <label class="form-label">Valor</label>
                             <input type="text" class="form-control" id="valorsignovital">
                         </div>
-                        <button class="btn btn-primary">ENVIAR</button>
+                        <button class="btn btn-primary" id="botonregistrosignovital">ENVIAR</button>
                     </form>
                 </div>
             </div>
@@ -133,10 +133,11 @@
     <footer>
 
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="../controllers/controladorsignovital.js"></script>
 </body>
 
 </html>
