--- a/src/view/medicamento.html
+++ b/src/view/medicamento.html
@@ -1,66 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../assets/styles/estilos.css">
     <title>Medicamento</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body>
-    <section class="container my-4">
-        <div class="row">
-            <div class="col-12 col-md-8">
-                <h3>Registro de Medicamento</h3>
-                <form class="p-5 border rounded shadow">
-                    <div class="row">
-                        <div class="col-6">
-                            <label class="form-label">Nombre</label>
-                            <input type="text" class="form-control" id="nombremedicamento">
-                        </div>
-                        <div class="col-6">
-                            <label class="form-label">Presentación</label>
-                            <input type="text" class="form-control" id="presentacionmedicamento">
-                        </div>
-                    </div>
-                    <div class="row my-3">
-                        <div class="col-6">
-                            <label class="form-label">Dosis</label>
-                            <input type="text" class="form-control" id="dosismedicamento">
-                        </div>
-                        <div class="col-6">
-                            <label class="form-label">Laboratorio</label>
-                            <input type="text" class="form-control" id="laboratoriomedicamento">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-6">
-                            <label class="form-label">Fecha de caducidad</label>
-                            <input type="date" class="form-control" id="caducidadmedicamento">
-                        </div>
-                        <div class="col-6">
-                            <label class="form-label">Contra indicaciones</label>
-                            <input type="text" class="form-control" id="contraindicacionesmedicamento">
-                        </div>
-                    </div>
-                    <div class="row my-3">
-                        <div class="col-6">
-                            <label class="form-label">Registro</label>
-                            <input type="text" class="form-control" id="registromedicamento">
-                        </div>
-                        <div class="col-6">
-                            <div class="form-check form-switch my-4">
-                                <input class="form-check-input" type="checkbox" role="switch" id="copagomedicamento">
-                                <label class="form-check-label" for="flexSwitchCheckDefault">¿Tiene copago?</label>
+    <header>
+        <nav class="navbar navbar-expand-lg menu navbar-dark">
+            <div class="container-fluid">
+                <img src="../../assets/img/logotipo.png" alt="logo" width="60" height="60">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Dropdown
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="./src/view/paciente.html">Paciente</a></li>
+                                <li><a class="dropdown-item" href="./src/view/medico.html">Medico</a></li>
+                                <li><a class="dropdown-item" href="./src/view/enfermedad.html">Enfermedad</a></li>
+                                <li><a class="dropdown-item" href="./src/view/medicamento.html">Medicamento</a></li>
+                                <li><a class="dropdown-item" href="./src/view/signovital.html">Signo Vital</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <section class="container my-4">
+            <div class="row">
+                <div class="col-12 col-md-8">
+                    <h3>Registro de Medicamento</h3>
+                    <form class="p-5 border rounded shadow">
+                        <div class="row">
+                            <div class="col-6">
+                                <label class="form-label">Nombre</label>
+                                <input type="text" class="form-control" id="nombremedicamento">
+                            </div>
+                            <div class="col-6">
+                                <label class="form-label">Presentación</label>
+                                <input type="text" class="form-control" id="presentacionmedicamento">
                             </div>
                         </div>
-                    </div>
-                    <button class="btn btn-primary w-100" type="submit" id="botonregistromedicamento">Registrar</button>
-                </form>
+                        <div class="row my-3">
+                            <div class="col-6">
+                                <label class="form-label">Dosis</label>
+                                <input type="text" class="form-control" id="dosismedicamento">
+                            </div>
+                            <div class="col-6">
+                                <label class="form-label">Laboratorio</label>
+                                <input type="text" class="form-control" id="laboratoriomedicamento">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-6">
+                                <label class="form-label">Fecha de caducidad</label>
+                                <input type="date" class="form-control" id="caducidadmedicamento">
+                            </div>
+                            <div class="col-6">
+                                <label class="form-label">Contra indicaciones</label>
+                                <input type="text" class="form-control" id="contraindicacionesmedicamento">
+                            </div>
+                        </div>
+                        <div class="row my-3">
+                            <div class="col-6">
+                                <label class="form-label">Registro</label>
+                                <input type="text" class="form-control" id="registromedicamento">
+                            </div>
+                            <div class="col-6">
+                                <div class="form-check form-switch my-4">
+                                    <input class="form-check-input" type="checkbox" role="switch"
+                                        id="copagomedicamento">
+                                    <label class="form-check-label" for="flexSwitchCheckDefault">¿Tiene copago?</label>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary w-100" type="submit"
+                            id="botonregistromedicamento">Registrar</button>
+                    </form>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <script src="../controllers/Formularios/controladormedicamentoformulario.js"></script>
 </body>
+
 </html>
