--- a/src/view/dashboards/dashboardMedico.html
+++ b/src/view/dashboards/dashboardMedico.html
@@ -6,27 +6,108 @@
     <title>Medicos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="../../../assets/styles/estilos.css">
+    <link rel="stylesheet" href="../../../assets/styles/estilosMedicoDash.css">
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg menu navbar-dark fixed-top">
+            <div class="container-fluid">
+                <img src="../../../assets/img/logotipo.png" alt="logo" width="45" height="45">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active mx-2" aria-current="page" href="#">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Dropdown
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="../paciente.html">Paciente</a></li>
+                                <li><a class="dropdown-item" href="../medico.html">Medico</a></li>
+                                <li><a class="dropdown-item" href="../enfermedad.html">Enfermedad</a></li>
+                                <li><a class="dropdown-item" href="../medicamento.html">Medicamento</a></li>
+                                <li><a class="dropdown-item" href="../signovital.html">Signo Vital</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
     <main>
-        <section class="container my-5">
-            <div class="row">
-                <div class="col-12 col-md-9 border rounded p-5 shadow">
-                    <h4>Medicos: </h4>
-                    <p>Hasta la fecha la APP registra <span class="fw-bold">14936</span> Medicos</p>
-                    <i class="bi bi-capsule fs-1"></i>
-                    <i class="bi bi-activity fs-1 mx-3"></i>
-                    <i class="bi bi-hospital fs-1"></i>
+
+        <div id="carouselExampleCaptions" class="carousel slide">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active carrusel">
+                    <img src="../../../assets/img/medicoDash1.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <div class="text-box">
+                            <h4 style="font-size: 40px;">Medicos: </h4>
+                            <p style="font-size: 20px;">Hasta la fecha se registra <span class="fw-bold">14936</span> medicos</p>
+                            <i class="bi bi-capsule fs-1"></i>
+                            <i class="bi bi-activity fs-1 mx-3"></i>
+                            <i class="bi bi-hospital fs-1"></i>
+                        </div>
+                        <a href="#fila" class="btn btn-primary my-3">Ver mas</a>
+                    </div>
                 </div>
-                <div class="col-12 col-md-3">
-                    <img src="../../../assets/img/tigrelogo.png" alt="logo" class="img-fluid">
+                <div class="carousel-item carrusel">
+                    <img src="../../../assets/img/medicoDash2.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <div class="text-box">
+                            <h5 style="font-size: 40px;">SIEMPRE PENDIENTES DE TI</h5>
+                            <p style="font-size: 20px;">Estos son nuestros profesionales que están siempres pendientes de nuestra GRAN FAMILIA.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item carrusel">
+                    <img src="../../../assets/img/medicoDash3.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <div class="text-box">
+                            <h5 style="font-size: 40px;">¡¡¡ATREVETE A FORMAR PARTE DE NUESTRA FAMILIA!!!</h5>
+                            <p style="font-size: 20px;">Unete para poder mejorar tu bienestar y tu salud.</p>
+                        </div>
+                        <a href="../paciente.html" class="btn btn-primary my-3">REGISTRATE</a>
+                    </div>
                 </div>
             </div>
-        </section>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+        <!-- Mostrar médicos -->
         <section class="container">
-            <div class="row row-cols-1 row-cols-md-3 g-5" id="fila">
-            </div>
+            <div class="row row-cols-1 row-cols-md-3 g-5" id="fila"></div>
         </section>
+        <!-- --------------- -->
     </main>
     <script src="../../controllers/Dashboard/controladormedicodashboard.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
