--- a/src/view/enfermedad.html
+++ b/src/view/enfermedad.html
@@ -10,7 +10,7 @@
     <section class="container my-4">
         <div class="row">
             <div class="col-12 col-md-8">
-                <h3>Registro de Medicamento</h3>
+                <h3>Registro de Enfermedad</h3>
                 <form class="p-5 border rounded shadow">
                     <div class="row">
                         <div class="col-6">
@@ -50,6 +50,6 @@
     </section>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="../controllers/Formularios/controladorenfermedadformulario.js"></script>
+    <script src="../controllers/Formularios/controladorenfermedadformulario.js" type="module"></script>
 </body>
 </html>
