--- a/src/view/dashboards/dashboardMedico.html
+++ b/src/view/dashboards/dashboardMedico.html
@@ -1,115 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medicos</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../../../assets/styles/estilos.css">
-    <link rel="stylesheet" href="../../../assets/styles/estilosMedicoDash.css">
+    <link rel="stylesheet" href="../../../assets/styles/estilosDash.css">
 </head>
+
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg menu navbar-dark fixed-top">
-            <div class="container-fluid">
-                <img src="../../../assets/img/logotipo.png" alt="logo" width="45" height="45">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active mx-2" aria-current="page" href="#">Inicio</a>
+    <main>
+        <div class="container-fluid">
+            <div class="row">
+                <!-- Sidebar -->
+                <div class="col-md-2 sidebar p-3">
+                    <a class="navbar-brand center d-flex justify-content-center align-items-center" href="./index.html">
+                        <img src="../../../assets/img/logotipo.png" alt="logo" width="45" height="45">
+                        <h5 class="fw-bold text-center">Médicos</h5>
+                    </a>
+                    <ul class="nav flex-column mt-2">
+                        <li class="nav-item text-center rounded botonesSidebar">
+                            <a class="nav-link active" aria-current="page" href="../../../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link active text-center" href="#"><i class="bi bi-speedometer2"></i>
+                                Dashboard</a>
                         </li>
-                        <li class="nav-item dropdown">
+                        <hr class="sidebar-divider">
+                        <li class="nav-item text-center">
+                            <p class="mt-3 fw-bold">SERVICIOS</p>
+                        <li class="nav-item dropdown text-center rounded botonesSidebar">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Dropdown
+                                aria-expanded="true"><i class="bi bi-app-indicator"></i>
+                                Gestión
                             </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="../paciente.html">Paciente</a></li>
-                                <li><a class="dropdown-item" href="../medico.html">Medico</a></li>
-                                <li><a class="dropdown-item" href="../enfermedad.html">Enfermedad</a></li>
-                                <li><a class="dropdown-item" href="../medicamento.html">Medicamento</a></li>
-                                <li><a class="dropdown-item" href="../signovital.html">Signo Vital</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
+                            <ul class="dropdown-menu gestion shadow">
+                                <li><a class="dropdown-item botonesSidebar text-white"
+                                        href="../paciente.html">Paciente</a></li>
+                                <li><a class="dropdown-item botonesSidebar text-white" href="../medico.html">Médico</a>
                                 </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item botonesSidebar text-white"
+                                        href="../enfermedad.html">Enfermedad</a></li>
+                                <li><a class="dropdown-item botonesSidebar text-white"
+                                        href="../medicamento.html">Medicamento</a></li>
+                                <li><a class="dropdown-item botonesSidebar text-white" href="../signovital.html">Signo
+                                        Vital</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                        <li class="nav-item dropdown text-center rounded botonesSidebar">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="true"><i class="bi bi-card-checklist"></i>
+                                Dashboard
+                            </a>
+                            <ul class="dropdown-menu gestion shadow">
+                                <li><a class="dropdown-item botonesSidebar text-white"
+                                        href="./dashboardPaciente.html">DB - Paciente</a></li>
+                                <li><a class="dropdown-item botonesSidebar text-white" href="./dashboardMedico.html">DB
+                                        - Médico</a></li>
+                                <li><a class="dropdown-item botonesSidebar text-white"
+                                        href="./dashboardEnfermedad.html">DB - Enfermedad</a></li>
+                                <li><a class="dropdown-item botonesSidebar text-white"
+                                        href="./dashboardMedicamento.html">DB - Medicamento</a></li>
+                                <li><a class="dropdown-item botonesSidebar text-white"
+                                        href="./dashboardSignoVital.html">DB - Signo Vital</a></li>
+                            </ul>
+                        </li>
                         </li>
                     </ul>
                 </div>
-            </div>
-        </nav>
-    </header>
-    <main>
-
-        <div id="carouselExampleCaptions" class="carousel slide">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active carrusel">
-                    <img src="../../../assets/img/medicoDash1.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <div class="text-box">
-                            <h4 style="font-size: 40px;">Medicos: </h4>
-                            <p style="font-size: 20px;">Hasta la fecha se registra <span class="fw-bold">14936</span> medicos</p>
-                            <i class="bi bi-capsule fs-1"></i>
-                            <i class="bi bi-activity fs-1 mx-3"></i>
-                            <i class="bi bi-hospital fs-1"></i>
+                <div class="col-md-10">
+                    <!-- Topbar -->
+                    <nav class="navbar topbar mb-4">
+                        <div class="container-fluid">
+                            <form class="d-flex w-50">
+                                <input class="form-control me-2" type="search" placeholder="Search for..."
+                                    aria-label="Search">
+                                <button class="btn btn-primary botones" type="submit"><i
+                                        class="bi bi-search"></i></button>
+                            </form>
+                            <div class="d-flex align-items-center">
+                                <span class="me-3">Douglas McGee</span>
+                                <img src="https://via.placeholder.com/40" alt="Profile" class="rounded-circle">
+                            </div>
                         </div>
-                        <a href="#fila" class="btn btn-primary my-3">Ver mas</a>
+                    </nav>
+                    <div class="container">
+                        <div class="row">
+                            <!-- Buscador médicos -->
+                            <div class="d-flex col-12 col-md-6 mb-4">
+                                <button class="btn btn-primary botones" type="submit"><i
+                                        class="bi bi-search"></i></button>
+                                <input type="text" class="form-control ms-2" placeholder="Buscar Producto">
+                            </div>
+                            <div class="col-3"></div>
+                            <div class="col-md-3 col-12 d-flex align-items-start justify-content-end">
+                                <button class="btn btn-primary botones btnTable" type="submit">
+                                    <i class="bi bi-table icTabla"></i>
+                                    <i class="bi bi-card-heading icTarjetas"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <hr class="sidebar-divider">
+                        <!-- Mostrar médicos -->
+                        <section class="container">
+                            <div class="row row-cols-1 row-cols-md-3 g-5" id="fila"></div>
+                        </section>
+                        <section class="container">
+                            <table id="tabla"></table>
+                        </section>
+                        <!-- --------------- -->
                     </div>
                 </div>
-                <div class="carousel-item carrusel">
-                    <img src="../../../assets/img/medicoDash2.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <div class="text-box">
-                            <h5 style="font-size: 40px;">SIEMPRE PENDIENTES DE TI</h5>
-                            <p style="font-size: 20px;">Estos son nuestros profesionales que están siempres pendientes de nuestra GRAN FAMILIA.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item carrusel">
-                    <img src="../../../assets/img/medicoDash3.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <div class="text-box">
-                            <h5 style="font-size: 40px;">¡¡¡ATREVETE A FORMAR PARTE DE NUESTRA FAMILIA!!!</h5>
-                            <p style="font-size: 20px;">Unete para poder mejorar tu bienestar y tu salud.</p>
-                        </div>
-                        <a href="../paciente.html" class="btn btn-primary my-3">REGISTRATE</a>
-                    </div>
-                </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
-        <!-- Mostrar médicos -->
-        <section class="container">
-            <div class="row row-cols-1 row-cols-md-3 g-5" id="fila"></div>
-        </section>
-        <!-- --------------- -->
+
+        <!-- Modal -->
+        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+            aria-labelledby="staticBackdropLabel">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="staticBackdropLabel">Médico</h1>
+                        <button type="button" class="btn-close cerrar" data-bs-dismiss="modal"
+                            aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary cerrar" data-bs-dismiss="modal">Cerrar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
+    <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
+        <img class="footer-logo" src="../../../assets/img/logotipo.png" alt="Logo">
+        <p class="footer-texto text-center text-white">"Salud anticipada, bienestar asegurado." </p>
+        <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
+            <a href="https://x.com/kuprax" target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-twitter"></i>
+            </a>
+            <a href="https://github.com/angeltamayoz" target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-github"></i>
+            </a>
+            <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-linkedin"></i>
+            </a>
+            <a href="https://www.instagram.com/angel_tamayo_z/" target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-instagram"></i>
+            </a>
+            <a href="mailto:angeltamayo@micorreo.com" target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-envelope"></i>
+            </a>
+        </div>
+        <div class="derechos-de-autor text-center">
+            Creado por:
+            <div class="d-flex flex-wrap justify-content-center mt-2">
+                <span class="mx-2">Valentina Galeano</span>
+                <span class="mx-2">Angel Tamayo</span>
+                <span class="mx-2">Julieta Grisales</span>
+                <span class="mx-2">Carlos Cano</span>
+            </div>
+            <br> (2024) &#169;
+        </div>
+    </footer>
     <script src="../../controllers/Dashboard/controladormedicodashboard.js" type="module"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
